# curv

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  katex-header.html
.github/workflows/: build.yml  publish.yml
benches/: ffts_bench.rs
doc/: Cargo.toml
examples/: diffie_hellman_key_exchange.rs  pedersen_commitment.rs  proof_of_knowledge_of_dlog.rs  verifiable_secret_sharing.rs
src/: lib.rs  main.rs  marker.rs  test_utils.rs
src/arithmetic/: arithmetic_dsl.rs  big_gmp.rs  big_native.rs  errors.rs  gmp.rs  macros.rs  mod.rs  modular_dsl.rs  native.rs  samplable.rs  serde.rs  serde_support.rs  serialize.rs  traits.rs
src/arithmetic/big_native/: primes.rs  ring.rs
src/arithmetic/modular_dsl/: add.rs  mul.rs  neg.rs  pow.rs  sub.rs
src/cryptographic_primitives/: mod.rs  polynomial.rs
src/cryptographic_primitives/commitments/: hash_commitment.rs  mod.rs  pedersen_commitment.rs  traits.rs
src/cryptographic_primitives/hashing/: blake2b512.rs  ext.rs  hash_sha256.rs  hash_sha512.rs  hmac_sha512.rs  merkle_tree.rs  mod.rs  traits.rs
src/cryptographic_primitives/pairing/: bls.rs  mod.rs  pairing_bls12_381.rs  traits.rs
src/cryptographic_primitives/proofs/: dlog_zk_protocol.rs  low_degree_exponent_interpolation.rs  mod.rs  sigma_correct_homomorphic_elgamal_enc.rs  sigma_correct_homomorphic_elgamal_encryption_of_dlog.rs  sigma_correct_homomrphic_elgamal_enc.rs  sigma_dlog.rs  sigma_ec_ddh.rs  sigma_valid_pedersen.rs  sigma_valid_pedersen_blind.rs
src/cryptographic_primitives/secret_sharing/: feldman_vss.rs  ffts.rs  mod.rs  polynomial.rs
src/cryptographic_primitives/twoparty/: coin_flip.rs  coin_flip_optimal_rounds.rs  dh_key_exchange.rs  dh_key_exchange_variant_with_pok_comm.rs  mod.rs
src/elliptic/: mod.rs  point.rs
src/elliptic/curves/: bls12_381.rs  curve25519.rs  curve_jubjub.rs  curve_ristretto.rs  ed25519.rs  g2.rs  mod.rs  p256.rs  ristretto.rs  secp256_k1.rs  secp256_r1.rs  serde.rs  test.rs  traits.rs  wrappers.rs
src/elliptic/curves/bls12_381/: g1.rs  g1_core.rs  g2.rs  g2.rs~57d0afddb7eb4034013255d7238b43b97f7e9685  gt.rs  mod.rs  pairing.rs  scalar.rs
src/elliptic/curves/test_vectors/: secp256_r1.txt  secp256_r1_pk_validation.txt
src/elliptic/curves/wrappers/: arithmetic.rs  encoded_point.rs  encoded_scalar.rs  error.rs  format.rs  generator.rs  mod.rs  point.rs  point_ref.rs  point_z.rs  scalar.rs  scalar_z.rs  serde_support.rs
