[package]
name = "curv-kzen"
version = "0.2.8"
edition = "2018"
description = "Rust language general purpose elliptic curve cryptography."
license = "MIT"
authors = ["Omer Shlomovits <omer.shlomovits@gmail.com>]"]
[lib]
crate-type = ["lib"]

[features]
default = ["rust-gmp-kzen"]
ec_secp256k1 = ["rust-gmp-kzen" ,"ecc", "secp256k1"]
ec_ristretto = ["rust-gmp-kzen", "ecc" , "curve25519-dalek"]
ec_ed25519 = ["rust-gmp-kzen", "ecc" , "cryptoxide"]
ec_bls12_381 = ["rust-gmp-kzen", "ecc" , "bls12_381"]
ecc = []
merkle = ["rust-crypto", "merkle-sha3"]

[dependencies]
rand = "0.6"
serde = "1.0"
serde_derive = "1.0"
zeroize = "1"
sha3 = "0.8.2"
sha2 = "0.8.0"
hmac = "0.7.1"
digest = "0.8.1"
hex = "^0.3"
blake2b_simd = "0.5.7"

[dependencies.rust-crypto]
version = "^0.2"
optional = true

[dependencies.merkle-sha3]
version = "^0.1"
optional = true


[dependencies.bls12_381]
version = "0.1.1"
optional = true


[dependencies.rust-gmp-kzen]
version = "0.5.0"
features = ["serde_support"]
optional = true

[dependencies.secp256k1]
version = "0.15.3"
features = ["serde"]
optional = true

[dependencies.curve25519-dalek]
version = "1.2.3"
optional = true

[dependencies.cryptoxide]
version = "0.1.2"
optional = true

[dev-dependencies]
bincode = "1.1"
serde_json = "1.0"
